# libcommon

./: .gitignore  .gitmodules  COPYING  LICENSE.txt  README.rst  autogen.sh  meson.build  meson_options.txt
demo/avahi/: RunAvahiExplorer.cxx  RunRendezvousHash.cxx  meson.build
demo/co/: RunCoQuery.cxx  RunCoReadTextFile.cxx  RunCoResolvedClient.cxx  meson.build
demo/lua/: CoLua.cxx  RunLua.cxx  meson.build
demo/spawn/: DumpCgroupState.cxx  KillCgroup.cxx  RunSpawn.cxx  WatchCgroup.cxx  meson.build
demo/was/: BadRequest.cxx  CoMirror.cxx  CoSleepMirror.cxx  Json.cxx  Mirror.cxx  meson.build
src/avahi/: Browser.hxx  Check.cxx  Check.hxx  Client.cxx  Client.hxx  ConnectionListener.hxx  Explorer.cxx  Explorer.hxx  ExplorerListener.hxx  Poll.cxx  Poll.hxx  Publisher.cxx  Publisher.hxx  Service.cxx  Service.hxx  meson.build
src/curl/: Easy.hxx  Global.cxx  Global.hxx  Handler.hxx  Init.cxx  Init.hxx  Multi.hxx  Request.cxx  Request.hxx  Slist.hxx  Version.cxx  Version.hxx  meson.build
src/event/: AwaitableSocketEvent.hxx  Chrono.hxx  CleanupTimer.cxx  CleanupTimer.hxx  CoarseTimerEvent.hxx  DeferEvent.cxx  DeferEvent.hxx  Duration.hxx  Event.hxx  Features.h  FineTimerEvent.hxx  InotifyEvent.cxx  InotifyManager.cxx  InotifyManager.hxx  Loop.cxx  Loop.hxx  NewSocketEvent.cxx  NewSocketEvent.hxx  PipeEvent.hxx  PipeLineReader.cxx  PipeLineReader.hxx  PrometheusStats.hxx  ShutdownListener.cxx  ShutdownListener.hxx  SignalEvent.cxx  SignalEvent.hxx  SocketEvent.cxx  SocketEvent.hxx  SocketWrapper.cxx  SocketWrapper.hxx  Stats.hxx  TimerEvent.cxx  TimerEvent.hxx  TimerList.cxx  TimerList.hxx  TimerWheel.cxx  TimerWheel.hxx  meson.build
src/http/: Date.cxx  Date.hxx  HeaderName.cxx  HeaderName.hxx  HeaderValue.hxx  List.cxx  List.hxx  Method.c  Method.h  Method.hxx  Range.cxx  Range.hxx  Status.c  Status.cxx  Status.h  Status.hxx  Token.hxx  meson.build
src/io/: Beneath.cxx  Beneath.hxx  BufferedOutputStream.cxx  BufferedOutputStream.hxx  BufferedReader.cxx  BufferedReader.hxx  ConfigParser.cxx  ConfigParser.hxx  CopyRegularFile.cxx  CopyRegularFile.hxx  DirectoryReader.cxx  DirectoryReader.hxx  FdHolder.hxx  FdOutputStream.cxx  FdOutputStream.hxx  FdReader.cxx  FdReader.hxx  FdType.hxx  FileAt.hxx  FileDescriptor.cxx  FileDescriptor.hxx  FileLineParser.cxx  FileLineParser.hxx  FileName.hxx  FileWriter.cxx  FileWriter.hxx  Iovec.hxx  LineParser.cxx  LineParser.hxx  Logger.cxx  Logger.hxx  MakeDirectory.cxx  MakeDirectory.hxx  MultiWriteBuffer.cxx  MultiWriteBuffer.hxx  Open.cxx  OutputStream.hxx  Pipe.cxx  Pipe.hxx  Reader.hxx  (+26 more)
src/json/: Boost.cxx  Error.hxx  ForwardList.hxx  Lookup.hxx  Make.hxx  Parse.cxx  Parse.hxx  Serialize.cxx  Serialize.hxx  String.hxx  ToDisposableBuffer.cxx  ToDisposableBuffer.hxx  Was.cxx  Was.hxx  meson.build
src/jwt/: ES256.cxx  ES256.hxx  EdDSA.cxx  EdDSA.hxx  OsslJWK.cxx  OsslJWK.hxx  OsslJWS.cxx  OsslJWS.hxx  RS256.cxx  RS256.hxx  String.cxx  String.hxx  meson.build
src/lua/: AbsoluteStackIndex.hxx  Assert.hxx  AutoClose.hxx  AutoCloseList.cxx  AutoCloseList.hxx  CheckArg.hxx  Chrono.hxx  Class.hxx  Close.hxx  CoAwaitable.cxx  CoAwaitable.hxx  CoCancel.cxx  CoCancel.hxx  CoOperation.cxx  CoOperation.hxx  CoRunner.cxx  CoRunner.hxx  Error.cxx  Error.hxx  FenvCache.hxx  ForEach.hxx  Json.cxx  LightUserData.hxx  Panic.cxx  Panic.hxx  PushCClosure.hxx  PushLambda.hxx  Ref.hxx  RegistryTable.cxx  RegistryTable.hxx  ReloadRunner.cxx  ReloadRunner.hxx  Resume.cxx  Resume.hxx  RunFile.cxx  RunFile.hxx  StackIndex.hxx  State.cxx  State.hxx  String.hxx  (+9 more)
src/net/: AddressInfo.cxx  AddressInfo.hxx  AllocatedSocketAddress.cxx  AllocatedSocketAddress.hxx  Anonymize.cxx  Anonymize.hxx  BareInetAddress.cxx  BareInetAddress.hxx  BindSocket.cxx  BindSocket.hxx  Buffered.cxx  Buffered.hxx  ConnectSocket.cxx  ConnectSocket.hxx  EasyMessage.cxx  EasyMessage.hxx  Features.hxx  HostParser.cxx  HostParser.hxx  IPv4Address.cxx  IPv4Address.hxx  IPv6Address.cxx  IPv6Address.hxx  InetChecksum.hxx  Interface.cxx  Interface.hxx  Literals.hxx  LocalSocketAddress.cxx  MaskedInetAddress.hxx  MaskedSocketAddress.cxx  MaskedSocketAddress.hxx  MsgHdr.hxx  MultiReceiveMessage.cxx  MultiReceiveMessage.hxx  Parser.cxx  Parser.hxx  RBindSocket.cxx  RBindSocket.hxx  RConnectSocket.cxx  RConnectSocket.hxx  (+33 more)
src/odbus/: AppendIter.hxx  Connection.cxx  Connection.hxx  Error.cxx  Error.hxx  Iter.hxx  Message.cxx  Message.hxx  PendingCall.hxx  ReadIter.hxx  ScopeMatch.hxx  Systemd.cxx  Systemd.hxx  Types.hxx  Values.hxx  Watch.cxx  Watch.hxx  meson.build
src/pg/: Array.cxx  Array.hxx  AsyncConnection.cxx  AsyncConnection.hxx  BinaryValue.hxx  CheckError.hxx  CoQuery.hxx  CoStockQuery.hxx  Config.hxx  Connection.cxx  Connection.hxx  DynamicParamWrapper.hxx  Error.cxx  Error.hxx  Hex.cxx  Hex.hxx  Interval.cxx  Interval.hxx  Notify.hxx  ParamWrapper.hxx  Reflection.cxx  Reflection.hxx  Result.cxx  Result.hxx  Serial.cxx  Serial.hxx  SharedConnection.cxx  SharedConnection.hxx  Stock.cxx  Stock.hxx  Timestamp.cxx  Timestamp.hxx  Transaction.hxx  meson.build
src/spawn/: Builder.hxx  CgroupKill.cxx  CgroupKill.hxx  CgroupMemoryWatch.cxx  CgroupMemoryWatch.hxx  CgroupMultiWatch.cxx  CgroupMultiWatch.hxx  CgroupOptions.cxx  CgroupOptions.hxx  CgroupPidsWatch.cxx  CgroupPidsWatch.hxx  CgroupState.cxx  CgroupState.hxx  CgroupWatch.cxx  CgroupWatch.hxx  CgroupWatchPtr.hxx  ChildOptions.cxx  ChildOptions.hxx  Client.cxx  Client.hxx  CoEnqueue.hxx  CoWaitSpawnCompletion.hxx  CompletionHandler.hxx  Config.cxx  Config.hxx  ConfigParser.cxx  ConfigParser.hxx  Direct.cxx  Direct.hxx  ErrorPipe.cxx  ErrorPipe.hxx  ExitListener.hxx  Glue.cxx  Glue.hxx  Handler.hxx  Hook.hxx  IProtocol.hxx  Init.cxx  Init.hxx  Interface.cxx  (+64 more)
src/ssl/: AltName.cxx  AltName.hxx  Base64.hxx  Buffer.cxx  Buffer.hxx  Certificate.cxx  Certificate.hxx  Ctx.hxx  Dummy.cxx  Dummy.hxx  Edit.cxx  Edit.hxx  Error.cxx  Error.hxx  EvpDigest.hxx  GeneralName.hxx  Hash.cxx  Hash.hxx  Key.cxx  Key.hxx  LoadFile.cxx  LoadFile.hxx  MemBio.hxx  (+15 more)
test/: TestHttpList.cxx  TestPgDecodeArray.cxx  TestPgEncodeArray.cxx  meson.build
(+958 files in other folders)
