option('avahi', type: 'feature', description: 'Avahi support (using libavahi-client)')
option('cares', type: 'feature', description: 'c-ares support')
option('curl', type: 'feature', description: 'CURL support')
option('lua', type: 'feature', description: 'Lua support (using luajit)')
option('mariadb', type: 'feature', description: 'MariaDB support')
option('nettle', type: 'feature', description: 'Nettle support')
option('pcre', type: 'feature', description: 'PCRE support')
option('pg', type: 'feature', description: 'PostgreSQL support (using libpq)')
option('sodium', type: 'feature', description: 'libsodium support')
option('uring', type: 'feature', description: 'enable io_uring (using liburing)')
option('was', type: 'feature', description: 'WAS support')

option('test', type: 'feature', description: 'Build unit tests')

option('fuzzer', type: 'boolean', value: false,
       description: 'Build fuzzers')

option('libfuzzer', type: 'boolean', value: false,
       description: 'use libFuzzers')
