executable(
  'DumpCgroupState',
  'DumpCgroupState.cxx',
  include_directories: inc,
  dependencies: [
    spawn_dep,
    net_dep,
    system_dep,
    util_dep,
  ],
)

executable(
  'RunSpawn',
  'RunSpawn.cxx',
  include_directories: inc,
  dependencies: [
    alloc_dep,
    spawn_dep,
    net_dep,
    system_dep,
    util_dep,
  ],
)

executable(
  'KillCgroup',
  'KillCgroup.cxx',
  include_directories: inc,
  dependencies: [
    alloc_dep,
    spawn_dep,
    event_dep,
    net_dep,
    system_dep,
    util_dep,
  ],
)

executable(
  'WatchCgroup',
  'WatchCgroup.cxx',
  include_directories: inc,
  dependencies: [
    alloc_dep,
    spawn_dep,
    event_dep,
    net_dep,
    system_dep,
    util_dep,
  ],
)
